<resources>
    <string name="app_name">Find Up</string>
    <string name="facebook_app_id">324377325036076</string>
    <string name="fb_login_protocol_scheme">fb324377325036076</string>
    <string name="find_things">Find New Things</string>
    <string name="search_hint">e.g food-truck , home business, etc</string>
    <string name="currency_search_hint">Search on currency</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="near_me_text">NEAR ME</string>
    <string name="events_text">EVENTS</string>
    <string name="signing_in">Signing In ...</string>

    <!--<string name="facebook_app_id">200521430799548</string>-->
    <!--<string name="fb_login_protocol_scheme">fb200521430799548</string>-->
    <string name="title_activity_maps">Map</string>


    <string name="title_activity_comments">Comments</string>
    <string name="comments_write_comment_btn">Write Comment</string>
    <string name="comments_write_your_comment_txt">Write your comment</string>
    <string name="comments_max_characters_txt">300 Characters</string>

    <string name="title_activity_photos">Photos</string>

    <string name="add_your_rating_txt">Add your rating</string>
    <string name="btn_submit">Submit</string>

    <string name="rating_text">Add your Rating</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="currency">Currency</string>
    <string name="egypt_pound">Egypt ( Pound $ )</string>
    <string name="australian_dollar">Australian ( Dollar $ )</string>
    <string name="united_states_dollar">United States ( Dollar $ )</string>
    <string name="argentine_peso">Argentine ( Peso $ )</string>
    <string name="select_language">Select Language</string>
    <string name="settings">Settings</string>
    <string name="contact_with_us">Contact with us</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="measure_distance">Measure Distance</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="_5_0">5.0</string>
    <string name="cafe">cafe</string>
    <string name="star">star</string>
    <string name="love">love</string>
    <string name="_16_8km">16.8km</string>
    <string name="food">Food</string>
    <string name="near">near</string>
    <string name="successful">Successful</string>
    <string name="thanks_text">Thanks for you to register the store account,,we will send you confirmation soon!</string>
    <string name="switch_to_user_account">Switch to user account</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Mahmoud Ali</string>
    <string name="profile_number">+966 55 11 73 969</string>
    <string name="chats">Chats</string>
    <string name="you_saved">You Saved</string>
    <string name="create_store_account">GET MONEY WITH STORE ACCOUNT</string>
    <string name="profile_notification">Notifications</string>
    <string name="system_message">System Message</string>
    <string name="add_your_first_product">Add Your Product</string>
    <string name="add_your_first_craft">Add Your First Craft</string>
    <string name="add_your_first_product_hint">Add your product with picture, name, description and price</string>
    <string name="add_your_first_craft_hint">Add your first craft with picture, name, description and price</string>
    <string name="add_product">Add Products</string>
    <string name="don_t_have_account_create_one">Don\'t have Account..Create one</string>
    <string name="login">Login</string>
    <string name="forget_password">    Forget Password    </string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">New password again</string>
    <string name="confirm_change_password">Confirm Change Password</string>
    <string name="mobile">Mobile</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="add_other_product">Add other product</string>
    <string name="product_price">18 SR</string>
    <string name="product_description">The Red and Black Cafe was a radical safer space</string>
    <string name="product_name">Product Name</string>
    <string name="craft_name">Craft Name</string>
    <string name="craft_price">By Negotiation</string>
    <string name="craft_description">The Red and Black Cafe was a radical safer space</string>
    <string name="choose_category">Choose Category</string>
    <string name="next">Next</string>
    <string name="information">Information</string>
    <string name="contact">Contact</string>
    <string name="store_name">Store Name</string>
    <string name="your_name">Your Name</string>
    <string name="other_language">Other Language</string>
    <string name="work_time">Work Time</string>
    <string name="days">Days</string>
    <string name="tags">Tags ( 3 tags mix )</string>
    <string name="add_days">Add Days</string>
    <string name="work_days">Sunday - Wednesday</string>
    <string name="time">Time</string>
    <string name="add_other_craft">Add other craft</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="location">Location</string>
    <string name="mobile_phone">Mobile / Phone</string>
    <string name="website">Website</string>
    <string name="social">Social</string>
    <string name="dynamic_location">Dynamic Location</string>
    <string name="static_location">Static Location</string>
    <string name="show_me_in_my_city">show me in my city</string>
    <string name="events">Events</string>
    <string name="home_business">Home Business</string>
    <string name="food_truck">Food-Truck</string>
    <string name="craft">CRAFT</string>
    <string name="stores">STORES</string>
    <string name="booth">BOOTH</string>
    <string name="others">OTHERS</string>
    <string name="truck">TRUCK</string>

    <string name="more">More</string>
    <string name="truck_description">A food truck is a large vehicle equipped to cook and sell food. Some, including ice cream trucks, sell frozen or prepackaged food; Others have on-board kitchens and prepare food from scratch. Sandwiches, hamburgers, french fries, and other regional fast food fare is common.</string>
    <string name="skip">Skip</string>
    <string name="intro_text">The Red and Black Cafe was a radical safer space cafe and worker…</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR SIGN IN WITH</string>
    <string name="craft_details">Craft Details</string>
    <string name="start_day">Start Date</string>
    <string name="end_day">End Date</string>
    <string name="start">Start at</string>
    <string name="end">End at</string>
    <array name="distance_seekbar_values">
        <item>0.5 KM</item>
        <item>2 KM</item>
        <item>5 KM</item>
        <item>unlimited</item>
    </array>
    <string name="title_activity_store_events">My Events</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="my_events">My Events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="old_events">Old events</string>
    <string name="create_event">Create event</string>
    <string name="no_events">No Events</string>
    <string name="no_events_text">you don\'t have any events to manage it\nplease create your event</string>
    <string name="create_new_events">Create new events</string>
    <string name="toolbar_create_event">Create Event</string>
    <string name="address">Address</string>
    <string name="category">Category</string>


    <string name="choose_work_days">Choose Work Days</string>
    <string name="all_work_days">All</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="dynamic_store_loc">your location is Dynamic .. change it if you want</string>

    <string name="loading_text">Loading Data</string>
    <string name="km">Km</string>
    <string name="m">m</string>
    <string name="no_internet_connection">your internet connection is disabled or enabled but weak.</string>
    <string name="no_internet_continue">Continue with out of date data</string>
    <string name="no_connection_try_again">Try Again</string>
    <string name="no_internet">No Internet</string>
    <string name="email_title_to_store">Message from FindUp User</string>
    <string name="get_directions">Get direction</string>
    <string name="title_activity_delete_acc_verify">DeleteAccVerifyActivity</string>
    <string name="count_value_milion">M</string>
    <string name="count_value_k">K</string>
    <string name="google_maps_keyget" templateMergeStrategy="preserve" translatable="false">AIzaSyBLjARROzvEGohPOzbnFGiQJthhOuJz6WQ</string>
    <string name="app_slogan">Search, Find, Go</string>


    <string name="no_stores_search">No Stores Found</string>
    <string name="no_events_search">No Events Found</string>


</resources>