<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activities.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:background="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_settingsBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:background="@null"
            android:drawableStart="@drawable/baseline_keyboard_arrow_left_black_48dp"
            android:fontFamily="@font/sfcompactdisplay_medium"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_settings"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_editProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_rounded_null"
            android:fontFamily="@font/sfcompactdisplay_semibold"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_rounded_null"
            android:fontFamily="@font/sfcompactdisplay_semibold"
            android:text="@string/notifications"
            android:textAllCaps="false"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_rounded_null"
            android:fontFamily="@font/sfcompactdisplay_semibold"
            android:text="@string/currency"
            android:textAllCaps="false"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_measureDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_rounded_null"
            android:fontFamily="@font/sfcompactdisplay_semibold"
            android:text="@string/measure_distance"
            android:textAllCaps="false"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_rounded_null"
            android:fontFamily="@font/sfcompactdisplay_semibold"
            android:text="@string/language"
            android:textAllCaps="false"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_inviteFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_rounded_null"
            android:fontFamily="@font/sfcompactdisplay_semibold"
            android:text="@string/invite_friend"
            android:textAllCaps="false"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_contactUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_rounded_null"
            android:fontFamily="@font/sfcompactdisplay_semibold"
            android:text="@string/contact_with_us"
            android:textAllCaps="false"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_rounded_null"
            android:fontFamily="@font/sfcompactdisplay_semibold"
            android:text="@string/terms_of_services"
            android:textAllCaps="false"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:textSize="24sp"
        android:fontFamily="@font/sfcompactdisplay_semibold"
        android:text="@string/logout"
        android:textColor="@color/colorBlack"
        android:textAllCaps="false"
        android:layout_marginBottom="2dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearSettings" />

    <ImageButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_forward"
        android:background="@null"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@+id/linearSettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logout" />

</android.support.constraint.ConstraintLayout>