<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar.UnFullScreen"
    tools:context=".UI.fragments.ProfileFragment">

    <TextView
        android:id="@+id/prodile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Profile"
        android:textColor="@color/colorBlack"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteX="13dp" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prodile_text"
        app:srcCompat="@drawable/group_5_2x" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_marginStart="12dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/sfcompactdisplay_semibold"
        android:text="@string/profile_name"
        android:textColor="@color/colorBlack"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/profile_pic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/sfcompactdisplay_medium"
        android:text="@string/profile_number"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <Button
        android:id="@+id/btn_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_button_rounded_null"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/notifications_button"
        android:fontFamily="@font/sfcompactdisplay_semibold"
        android:text="@string/profile_notification"
        android:textAllCaps="false"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@id/profile_pic"
        app:layout_constraintTop_toBottomOf="@id/profile_pic" />

    <Button
        android:id="@+id/btn_chats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_rounded_null"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/chat"
        android:fontFamily="@font/sfcompactdisplay_semibold"
        android:text="@string/chats"
        android:textAllCaps="false"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@id/profile_pic"
        app:layout_constraintTop_toBottomOf="@id/btn_notifications" />

    <Button
        android:id="@+id/btn_saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_rounded_null"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/fav"
        android:fontFamily="@font/sfcompactdisplay_semibold"
        android:text="@string/you_saved"
        android:textAllCaps="false"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@id/profile_pic"
        app:layout_constraintTop_toBottomOf="@id/btn_chats" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_rounded_null"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/settings"
        android:fontFamily="@font/sfcompactdisplay_semibold"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@id/profile_pic"
        app:layout_constraintTop_toBottomOf="@id/btn_saved" />

    <Button
        android:id="@+id/btn_createStoreAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_button_rounded_null"
        android:drawableEnd="@drawable/forward"
        android:fontFamily="@font/sfcompactdisplay_semibold"
        android:text="@string/create_store_account"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/btn_settings"
        app:layout_constraintTop_toBottomOf="@id/btn_settings"
        app:layout_constraintVertical_bias="0.9" />

</android.support.constraint.ConstraintLayout>