<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/ic_truck"
    android:fillViewport="true">
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.StoreEventsCategoryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_eventsCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_eventsBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableStart="@drawable/baseline_keyboard_arrow_left_white_48"
            android:fontFamily="@font/sfcompactdisplay_medium"
            android:text="@string/choose_category"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp24"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txt_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/events"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp48"
        android:fontFamily="@font/sfcompactdisplay_heavy"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_eventsDesc"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_eventsCategory" />
    <TextView
        android:id="@+id/txt_eventsDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truck_description"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/txt_events"
        app:layout_constraintBottom_toTopOf="@id/txt_eventsHomeBusiness"/>
    <TextView
        android:id="@+id/txt_eventsHomeBusiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_business"
        android:textAllCaps="true"
        android:textColor="@color/colorWhiteGrey"
        android:textStyle="bold"
        android:textSize="@dimen/sp36"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toTopOf="@+id/btn_eventsToCraft"
        app:layout_constraintTop_toBottomOf="@+id/txt_eventsDesc"/>


    <Button
    android:id="@+id/btn_eventsToCraft"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_button_rounded_null"
    android:text="@string/craft"
    android:textSize="@dimen/sp36"
    android:textAllCaps="true"
    android:textColor="@color/colorWhiteGrey"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/btn_eventsToTruck"
    app:layout_constraintTop_toBottomOf="@+id/txt_eventsHomeBusiness"/>
    <Button
        android:id="@+id/btn_eventsToTruck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_rounded_null"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:text="@string/food_truck"
        android:textAllCaps="true"
        android:textColor="@color/colorWhiteGrey"
        android:textSize="@dimen/sp36"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_eventsStores"
        app:layout_constraintTop_toBottomOf="@+id/btn_eventsToCraft" />
    <TextView
        android:id="@+id/txt_eventsStores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stores"
        android:textAllCaps="true"
        android:textColor="@color/colorWhiteGrey"
        android:textStyle="bold"
        android:textSize="@dimen/sp36"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toTopOf="@+id/txt_eventsBooth"
        app:layout_constraintTop_toBottomOf="@+id/btn_eventsToTruck"/>

    <TextView
        android:id="@+id/txt_eventsBooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:text="@string/booth"
        android:textAllCaps="true"
        android:textColor="@color/colorWhiteGrey"
        android:textSize="@dimen/sp36"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_eventsOthers"
        app:layout_constraintTop_toBottomOf="@+id/txt_eventsStores" />
    <TextView
        android:id="@+id/txt_eventsOthers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/others"
        android:textAllCaps="true"
        android:textColor="@color/colorWhiteGrey"
        android:textStyle="bold"
        android:textSize="@dimen/sp36"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/txt_eventsBooth"
        app:layout_constraintBottom_toTopOf="@+id/btn_eventsNext"/>


    <Button
        android:id="@+id/btn_eventsNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_button_rounded_accent"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
</ScrollView>