<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.activities.SuccessfulRegisterationActivity">

    <ImageView
        android:id="@+id/imageSuccess"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/check_3x"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txt_success"/>

    <TextView
        android:id="@+id/txt_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfcompactdisplay_heavy"
        android:text="@string/successful"
        android:textColor="@color/colorBlack"
        android:textSize="49sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_thanks"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txt_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/thanks_text"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_switch"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/switch_to_user_account"
        android:background="@drawable/bg_button_rounded_accent"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>